# injectguard

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  pages.yml
scripts/: build_centroids.py  evaluate_corpus.py
src/injectguard/: __init__.py  cli.py  config.py  containers.py  langchain.py  middleware.py  scanner.py  server.py  types.py
src/injectguard/data/: __init__.py  centroids.json  default_config.yml
src/injectguard/signals/: __init__.py  affective_load.py  authority_appeal.py  common.py  direct_address.py  encoding_evasion.py  instruction_shape.py  role_break.py  semantic_mismatch.py
src/injectguard/uploads/: __init__.py  builder.py  common.py  docx.py  errors.py  extract.py  html.py  limits.py  models.py  pdf.py  service.py  structured.py  text.py
src/injectguard/web/: __init__.py  app.js  config.js  index.html  styles.css
tests/: efficacy_threshold.json  test_api.py  test_cli.py  test_detectors_phase1.py  test_efficacy.py  test_integrations.py  test_uploads.py
tests/corpus/benign/: 001.env  002.env  003.credentials  004.pem  005.json  006.json  007.yaml  008.yaml  011.md  012.md  013.py  014.js  015.html  016.html  017.pdf.txt  018.pdf.txt  019.tool  020.tool  021.env  022.credentials  023.json  024.yaml  026.md  027.py  028.html  029.pdf.txt  030.tool  031.env  032.json  033.yaml  035.md  036.py  037.html  038.pdf.txt  039.tool  040.env
tests/corpus/malicious/: 001.env  002.credentials  003.json  004.yaml  006.md  007.html  008.pdf.txt  009.tool  010.env  011.credentials  012.json  013.yaml  015.md  016.html  017.pdf.txt  018.tool  019.env  020.credentials  021.json  022.yaml  024.md  025.html  026.pdf.txt  027.tool  028.env  029.credentials  030.json  031.yaml  033.md  034.html  035.pdf.txt  036.tool  037.env  038.credentials  039.json  040.yaml
