[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "injectguard"
version = "0.1.0"
description = "Offline prompt-injection detection for machine-shaped containers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "InjectGuard contributors" }]
keywords = ["llm", "prompt-injection", "security", "retrieval", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
nlp = [
  "spacy>=3.7",
  "sentence-transformers>=2.6",
]
langchain = [
  "langchain-core>=0.2",
]
server = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
injectguard = "injectguard.cli:main"

[dependency-groups]
dev = [
  "fastapi>=0.111",
  "langchain-core>=0.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
  "uvicorn>=0.30",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/injectguard"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/scripts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src/injectguard", "tests"]
